Closed
Bug 1476016
Opened 7 years ago
Closed 7 years ago
[Static Analysis] DEAD_STORE error in netwerk/mime/nsMIMEHeaderParamImpl.cpp
Categories
(Core :: Networking, defect, P3)
Core
Networking
Tracking
()
RESOLVED
FIXED
mozilla63
| Tracking | Status | |
|---|---|---|
| firefox63 | --- | fixed |
People
(Reporter: rbartlensky, Assigned: rbartlensky)
References
Details
(Whiteboard: [necko-triaged])
Attachments
(1 file)
netwerk/mime/nsMIMEHeaderParamImpl.cpp:455: error: DEAD_STORE
The value written to &valueStart (type char const *) is never used.
453. const char *nameStart = str;
454. const char *nameEnd = nullptr;
455. > const char *valueStart = str;
456. const char *valueEnd = nullptr;
457. bool isQuotedString = false;
| Comment hidden (mozreview-request) |
Updated•7 years ago
|
Whiteboard: [necko-triaged]
| Comment hidden (mozreview-request) |
Comment 3•7 years ago
|
||
| mozreview-review | ||
Comment on attachment 8992597 [details]
Bug 1476016: Fix DEAD_STORE issue in nsMIMEHeaderParamImpl.
https://reviewboard.mozilla.org/r/257470/#review265488
Attachment #8992597 -
Flags: review?(michal.novotny) → review+
| Assignee | ||
Updated•7 years ago
|
Keywords: checkin-needed
Pushed by rgurzau@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/51abf3731a71
Fix DEAD_STORE issue in nsMIMEHeaderParamImpl. r=michal
Keywords: checkin-needed
Comment 5•7 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 7 years ago
status-firefox63:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
You need to log in
before you can comment on or make changes to this bug.
Description
•