Bug 1476016: Fix DEAD_STORE issue in nsMIMEHeaderParamImpl. r=michal

MozReview-Commit-ID: F1p3ji1ezp3